discussion/kv_engine/173498/173498_rev18_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51681: Replace full CM scans with variables updated in-place

Instead of looping through every checkpoint owned
by the CheckpointManager and summing the individual
stats, create CM-level variables which are updated
in-place by Checkpoint MemoryCounters.

Change-Id: I369046cc1d966204e92a35c45799acd01d1d7b70

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Douglas
Date: 2022-04-22 16:10:04.000000000
Message: 
Patch Set 18: Patch Set 17 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-22 16:31:20.000000000
Message: 
Patch Set 18: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45542/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kv_bucket.cc(3016): error C2039: "getMemOverheadIndex": is not a member of "CheckpointDestroyerTask" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45542/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38263/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kv_bucket.cc:3016:31:
error: no member named "getMemOverheadIndex" in "CheckpointDestroyerTask"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38263/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16910/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:3016:31: error: no member named "getMemOverheadIndex" in "CheckpointDestroyerTask" [clang-diagnostic-error]
        memoryUsage += (task->getMemOverheadIndex()) +
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:3017:31: error: no member named "getMemOverheadQueue" in "CheckpointDestroyerTask" [clang-diagnostic-error]
                       (task->getMemOverheadQueue()) +
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:3018:31: error: no member named "getQueuedItemsMemUsage" in "CheckpointDestroyerTask" [clang-diagnostic-error]
                       (task->getQueuedItemsMemUsage());
                              ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16910/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:3016:31:
error: no member named "getMemOverheadIndex" in "CheckpointDestroyerTask" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16910/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19037/ : FAILURE

Compile error at [2022-04-22T16:30:17.160Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kv_bucket.cc:3016:31:
error: ?using element_type = class CheckpointDestroyerTask? {aka ?class CheckpointDestroyerTask?} has no member named ?getMemOverheadIndex?; did you mean ?cb::AtomicNonNegativeCounter<long unsigned int> CheckpointDestroyerTask::memOverheadIndex?? (not accessible from this context)
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19037/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27108/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6569/ : FAILURE

Compile error at [2022-04-22T16:28:22.676Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kv_bucket.cc:3016:31:
error: no member named "getMemOverheadIndex" in "CheckpointDestroyerTask"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6569/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19734/ : FAILURE

Compile error at [2022-04-22T16:29:23.620Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kv_bucket.cc:3016:31:
error: no member named "getMemOverheadIndex" in "CheckpointDestroyerTask"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19734/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17797/ : FAILURE

Compile error at [2022-04-22T16:30:22.636Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kv_bucket.cc:3016:31:
error: no member named "getMemOverheadIndex" in "CheckpointDestroyerTask"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17797/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18694/ : FAILURE

Compile error at [2022-04-22T16:27:43.923Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/kv_bucket.cc:3016:31:
error: ?using element_type = class CheckpointDestroyerTask? {aka ?class CheckpointDestroyerTask?} has no member named ?getMemOverheadIndex?; did you mean ?cb::AtomicNonNegativeCounter<long unsigned int> CheckpointDestroyerTask::memOverheadIndex?? (not accessible from this context)
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18694/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6659/ : FAILURE

Compile error at [2022-04-22T16:18:08.152Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kv_bucket.cc:3016:31:
error: ?using element_type = class CheckpointDestroyerTask? {aka ?class CheckpointDestroyerTask?} has no member named ?getMemOverheadIndex?; did you mean ?cb::AtomicNonNegativeCounter<long unsigned int> CheckpointDestroyerTask::memOverheadIndex?? (not accessible from this context)
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6659/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15878/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
